# Common_Sample_Apps

./: README.md
ess_demo/: CMakeLists.txt  README.md  prj.conf
ess_demo/boards/: bl5340_dvk_cpuapp.conf  bl654_sensor_board.conf  pinnacle_100_dvk.conf
ess_demo/docs/: ble.md
ess_demo/include/: app_version.h  dewpoint.h  lcd.h  sensor.h
ess_demo/src/: dewpoint.c  lcd.c  main.c  sensor.c
